<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" />
    <string name="log_activity_title">Logs</string>
    <string name="deleteAllLogs">Delete all logs</string>
    <string name="unknown">Unknown</string>
    <string name="ooops" translatable="false">Ooops!</string>
    <string name="somethingWentWrong">Something went wrong! A report has already been sent to the developer.</string>
    <string name="emailMeLong">If you want to add your opinion on what happen please email me at altomanigianluca@gmail.com by clicking the button below.</string>
    <string name="emailMe">Email me</string>
    <string name="send_email">Send email</string>
    <string name="openDrawer">Open drawer</string>
    <string name="donate">Donate</string>
    <string name="logs">Log files</string>
    <string name="preferences">Preferences</string>
    <string name="third_part">Third-part projects</string>
    <string name="closeDrawer">Close drawer</string>
    <string name="donateGoogle">Donate via Google Play</string>
    <string name="donateGoogleSummary">Part of the money will be subtracted by Google</string>
    <string name="about_app">About this application</string>
    <string name="connectingBillingService">Connecting to the billing service. Please wait…</string>
    <string name="noMailClients">There are no email clients installed!</string>
    <string name="offline">You\'re offline!</string>
    <string name="copiedToClipboard">Copied to clipboard!</string>
    <string name="logDeleted">All logs have been deleted.</string>
    <string name="userCancelled">You cancelled the operation.</string>
    <string name="thankYou">Thank you!</string>
    <string name="failedBuying">Failed to buy this item!</string>
    <string name="failedBillingConnection">Failed connecting to the billing service!</string>
    <string name="noLogs">There are no logs.</string>
    <string name="rateApp">Rate this app</string>
    <string name="leaveReview">Leave a review on the Play Store</string>
    <string name="offline_message">Looks like either you or the application service are offline.</string>
    <string name="retry">Retry</string>
    <string name="openSource">Open source</string>
    <string name="openSource_desc">This app is all open source!</string>
    <string name="version">Version</string>
    <string name="rateDonate">Rate/donate</string>
    <string name="devgianluCopyright" tools:ignore="PluralsCandidate">© %d devgianlu</string>
    <string name="devgianlu" translatable="false">devgianlu</string>
    <string name="devgianluEmail" translatable="false">altomanigianluca@gmail.com</string>
    <string name="donate_summary">Donate from my website: I\'ll get all the money!</string>

    <!-- Prefs -->
    <string name="prefs_nightMode">Enable night mode (dark theme)</string>
    <string name="prefs_nightMode_summary">Always enable night mode, regardless of the system default. You may want to restart the app.</string>
    <string name="prefs_usageStatistics">Usage statistics</string>
    <string name="prefs_usageStatisticsSummary">Toggle which information is sent to the developer</string>
    <string name="prefs_usageStatisticsDialogLong">We collect anonymous information about the app usage and about eventual crashes to improve the user experience. If you\'d like to opt out you can do so below.</string>
    <string name="prefs_usageTracking">Usage tracking</string>
    <string name="prefs_crashesTracking">Crashes tracking</string>
    <string name="prefs_tutorial">Tutorial</string>
    <string name="prefs_restartTutorial">Restart tutorial</string>
    <string name="prefs_developer">Developer</string>
    <string name="missingWebBrowser">Your device seems to be missing a web browser.</string>
    <string name="exportLogFiles">Export log files</string>
    <string name="translators">Translators</string>
</resources>